# columnate

./: .ghcid  .gitignore  ChangeLog.md  LICENSE  README.md  columnate.cabal  default.nix  release.nix  shell.nix
exe/: Main.hs
src/: Columnate.hs  Main.hs
test/src/: test.hs
