name:                columnate
version:             0.1.0.0
synopsis:            Columnate data sets while preserving color codes
-- description:
homepage:            http://github.com/bts/columnate
license:             BSD3
license-file:        LICENSE
author:              Brian Schroeder
maintainer:          bts@gmail.com
-- copyright:
category:            Text
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  ChangeLog.md

source-repository head
  type: git
  location: git://github.com/bts/columnate.git

flag test-tasty
  default: True
  manual: True

library
  default-language: Haskell2010
  ghc-options:      -Wall
  hs-source-dirs:   src
  exposed-modules:  Columnate
  build-depends:    base             >= 4.9  && < 4.10
                  , optparse-generic >= 1.2  && < 1.3
                  , text             >= 1.2  && < 1.3
                  , these

executable columnate
  main-is:          Main.hs
  build-depends:    base             >= 4.9  && < 4.10
                  , columnate
  hs-source-dirs:   exe
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  -- other-modules:
  -- other-extensions:

test-suite tasty
  type:             exitcode-stdio-1.0
  default-language: Haskell2010
  main-is:          test.hs
  hs-source-dirs:   test/src
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
  -- other-modules:
  if !flag(test-tasty)
    buildable: False
  else
    -- build-tool-depends: tasty-discover:tasty-discover >= 3.0 && < 4.2
    build-depends: columnate
    build-depends:
      base,
      hedgehog,
      tasty,
      -- tasty-golden   >= 2.3  && < 2.4,
      tasty-hedgehog,
      -- tasty-hunit    >= 0.9  && < 0.10,
      text
